tests/spec/pass/imports_regression.aja
import ("modules/cons_test")
import (
    {
        ally
        counter
    } from "modules/cons_test"
)

print(cons_test.ally("A", "B"))
print(ally("C", "D"))
print(counter)
