tests/spec/fail/import_alias_selective_invalid.aja
import (
    {
        ally
    } from "modules/cons_test" as c
)
